# jkn-rust

./: .env.example  Cargo.toml  README.md
src/: auth.rs  client.rs  config.rs  crypto.rs  error.rs  lib.rs
src/models/: antrean.rs  aplicares.rs  apotek.rs  icare.rs  mod.rs  pcare.rs  vclaim.rs
src/services/: antrean.rs  antrean_fktp.rs  aplicares.rs  apotek.rs  icare.rs  mod.rs  pcare.rs  rekam_medis.rs  vclaim.rs
