[package]
name = "jkn_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.44"
dotenv = "0.15.0"
flate2 = "1.1.5"
openssl = { version = "0.10.76", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
urlencoding = "2.1.3"
